--- a/force-app/main/default/classes/SharepointSchedular.cls
+++ b/force-app/main/default/classes/SharepointSchedular.cls
@@ -1,13 +1,17 @@
 public with sharing class SharepointSchedular implements Schedulable {
 
     String folderName = '';
-    public SharepointSchedular(String folderName){
+    String month = '';
+    String year = '';
+    public SharepointSchedular(String folderName,String month,String year){
         this.folderName = folderName;
+        this.month = month;
+        this.year = year;
     }
 
 
     public void execute(SchedulableContext sc) {
-        BatchGetCSVContent batch = new BatchGetCSVContent(folderName);
+        BatchGetCSVContent batch = new BatchGetCSVContent(this.folderName,this.month,this.year);
         Database.executeBatch(batch);
     }
 }
